# fast-bridge-protocol

./: .catalog-info.yaml  .gitignore  .gitmodules  Makefile  README.md  brownie-config.yaml  build_clean.sh  clean.sh  package.json  requirements-dev.txt
.github/workflows/: build.yml  security-analysis.yml  test.yml
aurora/: .catalog-info.yaml  .env.example  Makefile  README.md  foundry.toml  hardhat.config.js  package.json
aurora/.openzeppelin/: unknown-1313161554.json  unknown-1313161555.json  unknown-1313161560.json
aurora/configs/: aurora-mainnet.json  aurora-testnet.json  enpower-mainnet.json
aurora/contracts/: AuroraErc20FastBridge.sol
aurora/contracts/src/: AuroraErc20FastBridge.sol  IEvmErc20.sol  UtilsFastBridge.sol
aurora/integration-tests/: Cargo.toml
aurora/integration-tests/src/: aurora_fast_bridge_wrapper.rs  lib.rs  test_deploy.rs
aurora/scripts/: UnlockProof.js  deploy.js  utils.js
aurora/test/: EncodeInitMsgToBorsh.js  TestAuroraFastBridge.js  UnlockProof.js
contracts/: Cargo.toml  EthErc20FastBridge.sol
contracts/transfer/: Cargo.toml
contracts/transfer/src/: event.rs  lib.rs  lp_relayer.rs  transfer_data.rs  types.rs  utils.rs
contracts/transfer/src/events/: event.rs  nonce_event.rs  transfer_event.rs  transfer_failed_event.rs  unlock_event.rs
contracts/wtoken/: Cargo.toml
contracts/wtoken/src/: lib.rs
eth/: .catalog-info.yaml  .env.example  .eslintignore  .eslintrc.js  .gitignore  .mocharc.json  .npmignore  .prettierignore  .prettierrc.json  .solcover.js  .solhint.json  README.md  brownie-config.yaml  gas-report.txt  hardhat.config.js  package-lock.json  package.json  requirements-dev.txt  slither.config.json
eth/.husky/: pre-commit
eth/.openzeppelin/: goerli.json  mainnet.json  unknown-11155111.json  unknown-31337.json
eth/abi/contracts/EthErc20FastBridge.sol/: EthErc20FastBridge.json
eth/abi/contracts/TestToken.sol/: TestToken.json
eth/artifacts/contracts/EthErc20FastBridge.sol/: EthErc20FastBridge.json
eth/artifacts/contracts/IUniswapV2Router01.sol/: IUniswapV2Router01.json
eth/artifacts/contracts/TestToken.sol/: TestToken.json
eth/contracts/: ERC1967Proxy.sol  EthErc20FastBridge.sol  IUniswapV2Router01.sol  TestToken.sol
eth/docgen/: contract.hbs  helpers.js
eth/res/: EthErc20FastBridge_flat.sol  TestToken_flat.sol  storage_layout.txt
eth/scripts/: check_diff.js  copy_to_res.js  flatten_and_store.js
eth/scripts/EthErc20FastBridge/: deploy_and_verify_bridge.js  deploy_bridge_proxy.js  interact_with_bridge.js  pause_unpause.js  tasks.js  transfer_token.js  upgrade_bridge.js  verify.js  whitelistTokens.js  whitelist_tokens.js  withdraw_Stuck_tokens.js  withdraw_tokens_stuck.js
eth/scripts/deploy_testnet/: deploy_bridge.py  deploy_info.json  deploy_test_tokens.py
eth/scripts/deployment/: deploy-bridge.js  deploy-test-tokens.js  deploy_bridge_ETH.js  deploy_fastbridge_and_token.js  deploy_testnet_bridge_with_test_tokens.js  deploymentAdd.json  deploymentAddresses.json  index.js
eth/scripts/deployment/utilities/: helpers.js
eth/scripts/flatten/: flatten.js
eth/scripts/utilities/: helpers.js
eth/test/: bridge.test.js
eth/tests/: conftest.py  test_deploy.py  test_transfer.py  test_whitelist.py
front/: .env  index.html
front/js/: config.js  example.js  main.js  utils.js
front/js/src/: config.js  spectre-bridge-client.js
js/: config.js  main.js  utils.js
near/: .catalog-info.yaml  .gitignore  README.md  build.sh  build_for_tests.sh  build_locally.sh  clean.sh  deploy.sh  expand.sh  test.sh  unlock.sh
near/contracts/: .catalog-info.yaml  Cargo.toml  readme.md  test.sh
near/contracts/Build_Output/: eth_prover_mock0.wasm  fastbridge_mock.wasm  mock_eth_client.wasm  mock_token.wasm
near/contracts/admin_controlled/: Cargo.toml
near/contracts/bridge/: Cargo.toml
near/contracts/bridge/src/: ft.rs  lib.rs  lp_relayer.rs  utils.rs  whitelist.rs
near/contracts/bridge/src/tests/: integration_tests.rs  lp_unlock_tests.rs  mod.rs
near/contracts/bridge/src/tests/test_data/: lp_unlock_proof.json
near/contracts/eth_types/: Cargo.toml
near/contracts/eth_types/src/: lib.rs
near/contracts/mock_eth_client/: Cargo.toml
near/contracts/mock_eth_client/src/: lib.rs
near/contracts/mock_eth_prover/: Cargo.toml
near/contracts/mock_eth_prover/src/: lib.rs
near/contracts/mock_ft_receiver/: Cargo.toml
near/contracts/mock_ft_receiver/src/: lib.rs
near/contracts/mock_token/: Cargo.toml
near/contracts/mock_token/src/: lib.rs
near/contracts/transfer/: Cargo.toml
near/contracts/transfer/src/: event.rs  ft.rs  lib.rs  lp_relayer.rs  utils.rs
near/contracts/wtoken/: Cargo.toml
near/contracts/wtoken/src/: lib.rs
near/res/: fastbridge.wasm  fastbridge_expand.rs
near/testing_ui/: .env.example  README.md  index.html  package.json
near/testing_ui/css/: global.css
near/testing_ui/js/src/: config.js
near/utiles/: Cargo.toml
near/utils/: Cargo.toml  README.md
near/utils/src/: main.rs  storage_proof.rs
tests/: conftest.py  test_transfer.py  test_whitelist.py  test_withdraw_stuck_tokens.py
