[package]
name = "aurora-fast-bridge-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
aurora-sdk-integration-tests = { git = "https://github.com/aurora-is-near/aurora-contracts-sdk.git" }
fast-bridge-common = { git = "https://github.com/aurora-is-near/fast-bridge-common.git", tag = "0.2.0" }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
hex = { version = "0.4.3", features = ["serde"] }
near-sdk = "4.1.1"