[package]
name = "aurora-fast-bridge-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
aurora-sdk-integration-tests = { git = "https://github.com/aurora-is-near/aurora-contracts-sdk.git" }
fast-bridge-common = { git = "https://github.com/aurora-is-near/fast-bridge-common.git", tag = "0.2.1" }
fastbridge = { path = "../../near/contracts/bridge" }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
hex = { version = "0.4.3", features = ["serde"] }
near-sdk = "4.1.1"
borsh = "0.10.3"
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.0.0", default-features = false, features = ["contracts-std", "impl-serde", "borsh-compat"] }
aurora-engine_v3 = { package = "aurora-engine", git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.0.0", default-features = false, features = ["std"] }
rlp = "0.5.2"
parse_duration = "2.1.1"
