[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
near-sdk = "4.1.1"
serde = "1.0.152"
serde_json = "1.0.91"
clap = { version = "4.1.4", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
fast-bridge-common = { git = "https://github.com/aurora-is-near/fast-bridge-common.git", tag = "0.1.2" }
eth-types =  { git = "https://github.com/aurora-is-near/rainbow-bridge", rev = "3e859904f445105850c2a08b5a4b0fdc7680c841", default-features = false, features = ["eip1559"] }