[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
near-sdk = "4.1.1"
serde = "1.0.152"
serde_json = "1.0.91"
clap = { version = "4.1.4", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
fast-bridge-common = { git = "https://github.com/aurora-is-near/fast-bridge-common.git", tag = "0.2.1" }
eth-types =  { git = "https://github.com/aurora-is-near/rainbow-bridge", tag = "eth2-client-0.3.1", default-features = false }
