[package]
name = "bridge"
version = "0.0.1"
authors = ["mark.ts@blaize.tech", "tymofii.s@blaize.tech"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
serde = { version = "1.0" }
uint = { version = "0.8.3", default-features = false }
hex = "0.4.2"
ethabi = "12.0.0"
rlp = "0.4.2"
tiny-keccak = "1.4.0"
parse_duration = "2.1.1"
eth-types =  { git = "https://github.com/aurora-is-near/rainbow-bridge", rev = "3e859904f445105850c2a08b5a4b0fdc7680c841", default-features = false, features = ["eip1559"] }
spectre-bridge-common = { git = "ssh://git@github.com/aurora-is-near/spectre-bridge-common.git", rev = "38f269038eb4f885764be47633fd628e5bbfb7f5" }
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", rev = "c043add4c2a0810872c4326a55c5162bccd3f4ee" }
near-plugins-derive = { git = "https://github.com/aurora-is-near/near-plugins", rev = "c043add4c2a0810872c4326a55c5162bccd3f4ee" }