[package]
name = "bridge"
version = "0.0.1"
authors = ["mark.ts@blaize.tech", "tymofii.s@blaize.tech"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"
uint = { version = "0.8.3", default-features = false }
hex = "0.4.2"

[dev-dependencies]
near-sdk-sim = "3.1.1"