[package]
name = "bridge"
version = "0.0.1"
authors = ["mark.ts@blaize.tech", "tymofii.s@blaize.tech"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.7"
serde = { version = "1.0"}
eth-types =  { git = "https://github.com/near/rainbow-bridge", rev = "3a5373168e720d237ab451e8d41e81010693f876" }
near-contract-standards = "4.0.0-pre.7"
near-sdk-sim = "3.2.0"
uint = { version = "0.8.3", default-features = false }
hex = "0.4.2"
ethabi = "12.0.0"
rlp = "0.4.2"

[dev-dependencies]
near-sdk-sim = "3.1.1"