[package]
name = "mock_token"
version = "0.0.1"
authors = ["mark.ts@blaize.tech", "tymofii.s@blaize.tech"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.8"
near-contract-standards = "4.0.0-pre.8"

[dev-dependencies]
near-sdk-sim = "3.1.1"